--- a/BlackJackProject/BlackJack/App.xaml
+++ b/BlackJackProject/BlackJack/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:BlackJack"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="Button">
+            <Setter Property="Width" Value="90" />
+            <Setter Property="Height" Value="25" />
+            <Setter Property="Margin" Value="10" />
+        </Style>
     </Application.Resources>
 </Application>
