--- a/BlackJackProject/BlackJack/AuthWindow.xaml
+++ b/BlackJackProject/BlackJack/AuthWindow.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="AuthWindow" Height="300" Width="300">
-    <Grid>
+    <Grid Name="grid1">
         
+
     </Grid>
 </Window>
