--- a/BlackJackProject/BlackJack/MainWindow.xaml
+++ b/BlackJackProject/BlackJack/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:BlackJack"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
+    <Grid Name="MainWindowGrid" Margin="0,0,15,0" >
         <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="432,286,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
 
     </Grid>
