--- a/BlackJackProject/BlackJack/AuthWindow.xaml
+++ b/BlackJackProject/BlackJack/AuthWindow.xaml
@@ -1,9 +1,20 @@
-﻿<Window x:Class="BlackJack.AuthWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="AuthWindow" Height="300" Width="300">
-    <Grid Name="grid1">
-        
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="BlackJack.AuthWindow"
+        Title="Авторизация" Height="300" Width="300" WindowStartupLocation="CenterScreen">
+    <StackPanel x:Name="stackPanel1">
+        <Label Content="Авторизация" HorizontalAlignment="Left" Margin="89,40,0,0" VerticalAlignment="Top" Width="112" FontSize="13" FontWeight="Bold"/>
+        <Canvas Height="141">
+            <Label Content="Логин" Canvas.Left="27" Canvas.Top="10"/>
+            <Label Content="Пароль" Canvas.Left="27" Canvas.Top="53"/>
+            <TextBox Name="LoginTextBox" Height="23" TextWrapping="Wrap" Canvas.Left="104" Canvas.Top="12" Width="123" PreviewLostKeyboardFocus="LoginTextBox_LostFocus"/>
+            <PasswordBox Name="PasswTextBox" Height="23" PasswordChar="*" Canvas.Left="104" Canvas.Top="53" Width="123"/>
+            <Button Name="LoginButton" Content="Войти" Margin="0" Width="59" Canvas.Left="69" Canvas.Top="97" Cursor="Hand"/>
+            <Button Name="BackButton" Content="Отмена" Margin="0" Width="59" Canvas.Left="156" Canvas.Top="97" Click="BackButton_Click" Cursor="Hand"/>
+        </Canvas>
 
-    </Grid>
+
+
+    </StackPanel>
 </Window>
