--- a/BlackJackProject/BlackJack/MainWindow.xaml
+++ b/BlackJackProject/BlackJack/MainWindow.xaml
@@ -6,9 +6,9 @@
         xmlns:local="clr-namespace:BlackJack"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid Name="MainWindowGrid" Margin="0,0,15,0" >
+    <Grid Name="MainWindowGrid" Margin="0,0,15,0" Loaded="MainWindowGrid_Loaded" >
         <Button x:Name="button" Content="Exit" HorizontalAlignment="Left" Margin="345,288,0,0" VerticalAlignment="Top" Width="147" Click="button_Click"/>
-        <Button x:Name="btnMenuWindow" Content="menuWindow" HorizontalAlignment="Left" Margin="203,153,0,0" VerticalAlignment="Top" Width="75" Click="btnMenuWindow_Click"/>
+        <Button x:Name="btnMenuWindow" Content="menuWindow" HorizontalAlignment="Left" Margin="10,288,0,0" VerticalAlignment="Top" Width="75" Click="btnMenuWindow_Click"/>
 
     </Grid>
 </Window>
