--- a/BlackJackProject/BlackJack/App.xaml
+++ b/BlackJackProject/BlackJack/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="BlackJack.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:BlackJack"
+             xmlns:local="clr-namespace:BlackJack.BJWindows"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         
