--- a/BlackJackProject/BlackJack/BJWindows/MenuWindow.xaml
+++ b/BlackJackProject/BlackJack/BJWindows/MenuWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="BlackJack.MenuWindow"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="BlackJack.BJWindows.MenuWindow"
         Title="Menu" Height="300" Width="300" MinHeight="300" MinWidth="250" MaxHeight="310" MaxWidth="350">
     <StackPanel>
         <DockPanel>
