--- a/BlackJackProject/BlackJack/BJWindows/RoomToFindPlayer.xaml
+++ b/BlackJackProject/BlackJack/BJWindows/RoomToFindPlayer.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="BlackJack.RoomToFindPlayer"
+﻿<Window x:Class="BlackJack.BJWindows.RoomToFindPlayer"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Комната ожидания игроков" Height="400" Width="300" MinHeight="400">
