--- a/BlackJackProject/BlackJack/BJWindows/RegisterForm.xaml
+++ b/BlackJackProject/BlackJack/BJWindows/RegisterForm.xaml
@@ -14,7 +14,7 @@
             <TextBox x:Name="txtLogin" Height="23" TextWrapping="Wrap" Canvas.Left="133" Canvas.Top="51" Width="123" PreviewLostKeyboardFocus="txtLogin_LostFocus" />
             <PasswordBox x:Name="txtPassw" Height="23" Canvas.Left="133" Canvas.Top="98" Width="123" PasswordChar="*" PasswordChanged="Content_TextChanged"/>
             <PasswordBox x:Name="txtConfirmPassword" Height="23" Canvas.Left="133" Canvas.Top="144" Width="123" PasswordChar="*" PasswordChanged="Content_TextChanged"/>
-            <Button x:Name="RegisterButton" Content="Регистрация" Margin="0" Width="72" Canvas.Left="61" Canvas.Top="198" Cursor="Hand" IsEnabled="False"/>
+            <Button x:Name="RegisterButton" Content="Регистрация" Margin="0" Width="72" Canvas.Left="61" Canvas.Top="198" Cursor="Hand" IsEnabled="False" Click="RegisterButton_Click"/>
             <Button x:Name="BackButton" Content="Отмена" Margin="0" Width="59" Canvas.Left="178" Canvas.Top="198" Click="BackButton_Click" Cursor="Hand"/>
 
         </Canvas>
