--- a/BlackJackProject/BlackJack/BJWindows/AuthWindow.xaml
+++ b/BlackJackProject/BlackJack/BJWindows/AuthWindow.xaml
@@ -8,8 +8,8 @@
         <Canvas Height="141">
             <Label Content="Логин" Canvas.Left="27" Canvas.Top="10"/>
             <Label Content="Пароль" Canvas.Left="27" Canvas.Top="53"/>
-            <TextBox Name="LoginTextBox" Height="23" TextWrapping="Wrap" Canvas.Left="104" Canvas.Top="12" Width="123" PreviewLostKeyboardFocus="LoginTextBox_LostFocus"/>
-            <PasswordBox Name="PasswTextBox" Height="23" PasswordChar="*" Canvas.Left="104" Canvas.Top="53" Width="123"/>
+            <TextBox x:Name="tbLogin" Height="23" TextWrapping="Wrap" Canvas.Left="104" Canvas.Top="12" Width="123" PreviewLostKeyboardFocus="LoginTextBox_LostFocus"/>
+            <PasswordBox x:Name="tbPassword" Height="23" PasswordChar="*" Canvas.Left="104" Canvas.Top="53" Width="123"/>
             <Button Name="LoginButton" Content="Войти" Margin="0" Width="88" Canvas.Left="10" Canvas.Top="98" Cursor="Hand" Click="LoginButton_Click"/>
             <Button Name="btnRegestration" Content="Регистрация" Margin="0" Width="88" Canvas.Left="104" Canvas.Top="98" Click="btnRegestration_Click" Cursor="Hand"/>
             <Button Name="BackButton" Content="Отмена" Margin="0" Width="78" Canvas.Left="197" Canvas.Top="98" Click="BackButton_Click" Cursor="Hand"/>
