--- a/BlackJackProject/BlackJack/BJWindows/RegisterForm.xaml
+++ b/BlackJackProject/BlackJack/BJWindows/RegisterForm.xaml
@@ -6,14 +6,12 @@
         <Label Content="Регистрация" HorizontalAlignment="Left" Margin="89,30,0,0" VerticalAlignment="Top" Width="112" FontSize="13" FontWeight="Bold"/>
         
         <Canvas Height="233">
-            <Label Content="Email" Canvas.Left="27" Canvas.Top="10"/>
             <Label Content="Логин" Canvas.Left="27" Canvas.Top="51"/>
             <Label Content="Пароль" Canvas.Left="27" Canvas.Top="98"/>
             <Label Content="Пароль еще раз" Canvas.Left="27" Canvas.Top="144"/>
-            <TextBox x:Name="txtEmail" Height="23" TextWrapping="Wrap" Canvas.Left="133" Canvas.Top="10" Width="123" PreviewLostKeyboardFocus="txtEmail_LostFocus"/>
-            <TextBox x:Name="txtLogin" Height="23" TextWrapping="Wrap" Canvas.Left="133" Canvas.Top="51" Width="123" PreviewLostKeyboardFocus="txtLogin_LostFocus" />
-            <PasswordBox x:Name="txtPassw" Height="23" Canvas.Left="133" Canvas.Top="98" Width="123" PasswordChar="*" PasswordChanged="Content_TextChanged"/>
-            <PasswordBox x:Name="txtConfirmPassword" Height="23" Canvas.Left="133" Canvas.Top="144" Width="123" PasswordChar="*" PasswordChanged="Content_TextChanged"/>
+            <TextBox x:Name="tbLogin" Height="23" TextWrapping="Wrap" Canvas.Left="133" Canvas.Top="51" Width="123" PreviewLostKeyboardFocus="txtLogin_LostFocus" />
+            <PasswordBox x:Name="pbPassword" Height="23" Canvas.Left="133" Canvas.Top="98" Width="123" PasswordChar="*" PasswordChanged="Content_TextChanged"/>
+            <PasswordBox x:Name="pbConfirmPassword" Height="23" Canvas.Left="133" Canvas.Top="144" Width="123" PasswordChar="*" PasswordChanged="Content_TextChanged"/>
             <Button x:Name="RegisterButton" Content="Регистрация" Margin="0" Width="72" Canvas.Left="61" Canvas.Top="198" Cursor="Hand" IsEnabled="False" Click="RegisterButton_Click"/>
             <Button x:Name="BackButton" Content="Отмена" Margin="0" Width="59" Canvas.Left="178" Canvas.Top="198" Click="BackButton_Click" Cursor="Hand"/>
 
