--- a/BlackJackProject/BlackJack/MainWindow.xaml
+++ b/BlackJackProject/BlackJack/MainWindow.xaml
@@ -9,7 +9,7 @@
     <Grid Name="MainWindowGrid" Margin="0,0,15,0" Loaded="MainWindowGrid_Loaded" >
         <StackPanel>
             <WrapPanel>
-                <TextBox Name="txtNickname" Text="Hitman" Width="100"/>
+                <TextBox Name="txtNickname" Text="Players : " Width="100"/>
                 <Label Name="lblStatus" />
             </WrapPanel>
             <WrapPanel Name="WrapPanelForList">
