--- a/BlackJackProject/BlackJack/BJWindows/AuthWindow.xaml
+++ b/BlackJackProject/BlackJack/BJWindows/AuthWindow.xaml
@@ -2,17 +2,20 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="BlackJack.BJWindows.AuthWindow"
-        Title="Авторизация" Height="300" Width="300" WindowStartupLocation="CenterScreen">
+        Title="Авторизация" Height="350" Width="350" WindowStartupLocation="CenterScreen">
     <StackPanel x:Name="stackPanel1">
-        <Label Content="Авторизация" HorizontalAlignment="Left" Margin="89,40,0,0" VerticalAlignment="Top" Width="112" FontSize="13" FontWeight="Bold"/>
-        <Canvas Height="141">
-            <Label Content="Логин" Canvas.Left="27" Canvas.Top="10"/>
-            <Label Content="Пароль" Canvas.Left="27" Canvas.Top="53"/>
-            <TextBox x:Name="tbLogin" Height="23" TextWrapping="Wrap" Canvas.Left="104" Canvas.Top="12" Width="123" PreviewLostKeyboardFocus="LoginTextBox_LostFocus"/>
-            <PasswordBox x:Name="tbPassword" Height="23" PasswordChar="*" Canvas.Left="104" Canvas.Top="53" Width="123"/>
-            <Button Name="LoginButton" Content="Войти" Margin="0" Width="88" Canvas.Left="10" Canvas.Top="98" Cursor="Hand" Click="LoginButton_Click"/>
-            <Button Name="btnRegestration" Content="Регистрация" Margin="0" Width="88" Canvas.Left="104" Canvas.Top="98" Click="btnRegestration_Click" Cursor="Hand"/>
-            <Button Name="BackButton" Content="Отмена" Margin="0" Width="78" Canvas.Left="197" Canvas.Top="98" Click="BackButton_Click" Cursor="Hand"/>
+        <Label Content="Авторизация" HorizontalAlignment="Center" Margin="30,30,30,0" VerticalAlignment="Top" Width="112" FontSize="13" FontWeight="Bold"/>
+        <Canvas Height="170">
+            <Label Content="Логин" Canvas.Left="49" Canvas.Top="10"/>
+            <Label Content="Пароль" Canvas.Left="49" Canvas.Top="66"/>
+            <TextBox x:Name="tbLogin" Height="23" TextWrapping="Wrap" Canvas.Left="120" Canvas.Top="10" Width="123" PreviewKeyUp="tbLogin_PreviewKeyUp"/>
+            <Label Name="lbLoginError" Content="Ошибка логина" Canvas.Left="120" Canvas.Top="45" Width="123" Height="14" FontSize="10" Foreground="Red" Margin="0" Padding="0"/>
+            <PasswordBox x:Name="tbPassword" Height="23" Canvas.Left="120" Canvas.Top="64" Width="123" PreviewKeyUp="tbPassword_PreviewKeyUp"/>           
+            <Button Name="LoginButton" Content="Войти" Margin="0" Width="88" Canvas.Left="27" Canvas.Top="121" Cursor="Hand" Click="LoginButton_Click"/>
+            <Button Name="btnRegestration" Content="Регистрация" Margin="0" Width="110" Canvas.Left="120" Canvas.Top="121" Click="btnRegestration_Click" Cursor="Hand"/>
+            <Button Name="BackButton" Content="Отмена" Margin="0" Width="78" Canvas.Left="235" Canvas.Top="121" Click="BackButton_Click" Cursor="Hand"/>
+            <Label x:Name="lbPasswError" Content="Ошибка пароля" Canvas.Left="120" Canvas.Top="99" Width="123" Height="14" FontSize="10" Foreground="Red" Margin="0" Padding="0"/>
+
         </Canvas>
     </StackPanel>
 </Window>
