--- a/BlackJackProject/BlackJack/BJWindows/RegisterForm.xaml
+++ b/BlackJackProject/BlackJack/BJWindows/RegisterForm.xaml
@@ -2,18 +2,19 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Регистрация" Height="326" Width="300" WindowStartupLocation="CenterScreen">
-    <StackPanel x:Name="stackPanel1" Margin="0,0,-8,1">
-        <Label Content="Регистрация" HorizontalAlignment="Left" Margin="89,30,0,0" VerticalAlignment="Top" Width="112" FontSize="13" FontWeight="Bold"/>
-        
+    <StackPanel x:Name="stackPanel1" Margin="0">
+        <Label Content="Регистрация" HorizontalAlignment="Center" Margin="30,30,30,0" VerticalAlignment="Top"  Width="112" FontSize="13" FontWeight="Bold"/>
+
         <Canvas Height="233">
-            <Label Content="Логин" Canvas.Left="27" Canvas.Top="51"/>
-            <Label Content="Пароль" Canvas.Left="27" Canvas.Top="98"/>
-            <Label Content="Пароль еще раз" Canvas.Left="27" Canvas.Top="144"/>
-            <TextBox x:Name="tbLogin" Height="23" TextWrapping="Wrap" Canvas.Left="133" Canvas.Top="51" Width="123" PreviewLostKeyboardFocus="txtLogin_LostFocus" />
-            <PasswordBox x:Name="pbPassword" Height="23" Canvas.Left="133" Canvas.Top="98" Width="123" PasswordChar="*" PasswordChanged="Content_TextChanged"/>
-            <PasswordBox x:Name="pbConfirmPassword" Height="23" Canvas.Left="133" Canvas.Top="144" Width="123" PasswordChar="*" PasswordChanged="Content_TextChanged"/>
-            <Button x:Name="RegisterButton" Content="Регистрация" Margin="0" Width="72" Canvas.Left="61" Canvas.Top="198" Cursor="Hand" IsEnabled="False" Click="RegisterButton_Click"/>
-            <Button x:Name="BackButton" Content="Отмена" Margin="0" Width="59" Canvas.Left="178" Canvas.Top="198" Click="BackButton_Click" Cursor="Hand"/>
+            <Label Content="Логин" Canvas.Left="27" Canvas.Top="32"/>
+            <Label Content="Пароль" Canvas.Left="27" Canvas.Top="71"/>
+            <Label Content="Пароль еще раз" Canvas.Left="20" Canvas.Top="106"/>
+            <TextBox x:Name="tbLogin" Height="23" TextWrapping="Wrap" Canvas.Left="133" Canvas.Top="30" Width="123" />
+            <PasswordBox x:Name="pbPassword" Height="23" Canvas.Left="133" Canvas.Top="69" Width="123" PasswordChanged="Content_TextChanged"/>
+            <PasswordBox x:Name="pbConfirmPassword" Height="23" Canvas.Left="133" Canvas.Top="104" Width="123" PasswordChanged="Content_TextChanged"/>
+            <Label x:Name="lbPasswError" Content="Ошибка пароля" Canvas.Left="133" Canvas.Top="139" Width="123" Height="14" FontSize="10" Foreground="Red" Margin="0" Padding="0"/>
+            <Button x:Name="RegisterButton" Content="Регистрация" Margin="0" Width="112" Canvas.Left="27" Canvas.Top="178" Cursor="Hand" IsEnabled="False" Click="RegisterButton_Click"/>
+            <Button x:Name="BackButton" Content="Отмена" Margin="0" Width="85" Canvas.Left="161" Canvas.Top="178" Click="BackButton_Click" Cursor="Hand"/>
 
         </Canvas>
 
